db2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db2-container
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db2-container
  template:
    metadata:
      labels:
        app: db2-container
    spec:
      containers:
      - name: db2-container
        image: devcloudninjas/mydb
        ports:
        - containerPort: 50000
        volumeMounts:
        - name: db2-storage
          mountPath: /database
      volumes:
      - name: db2-storage
        emptyDir: {}
