web-deployment.yaml
apiVersion: apps.openshift.io/v1
kind: Deployment
metadata:
  name: my-web
spec:
  replicas: 1
  selector:
    app: my-web
  template:
    metadata:
      labels:
        app: my-web
    spec:
      containers:
      - name: my-web
        image: devcloudninjas/myweb:16
        ports:
        - containerPort: 5000
