api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: my-web
  ports:
  - protocol: TCP
    port: 5001
    targetPort: 5001
