db2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db2-service
spec:
  selector:
    app: db2-container
  ports:
  - protocol: TCP
    port: 50000
    targetPort: 50000
