web-service.yaml
# web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    app: my-web
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
