web-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: web-route
spec:
  to:
    kind: Service
    name: web-service
  port:
    targetPort: 5000
